# pqc-ledger-task

./: .clang-format  .gitignore  BENCHMARK_RESULTS.md  CMakeLists.txt  COMPLETE_SUMMARY.md  FIXES_APPLIED.md  FIX_PLAN.md  GITHUB_UPLOAD_INSTRUCTIONS.md  INSTALL_OPENSSL.md  ISSUES_SUMMARY.md  ML_DSA_INTEGRATION_COMPLETE.md  PHASE2_COMPLETE.md  PHASE3_CLI_TEST_RESULTS.md  PHASE3_COMPLETE.md  PHASE3_TEST_RESULTS.md  PICOSHA2_INTEGRATION_COMPLETE.md  PROJECT_EXPLANATION.md  QUICK_EXPLANATION.md  README.md  TESTING_PLAN.md  TEST_SUMMARY_REPORT.md  VALIDATION_TESTS_RESULTS.md  build_cli.ps1  run_benchmark.ps1  run_validation_tests.ps1
benches/: CMakeLists.txt  verify.cpp
include/pqc_ledger/: error.hpp  pqc_ledger.hpp  types.hpp
include/pqc_ledger/codec/: decode.hpp  encode.hpp
include/pqc_ledger/crypto/: address.hpp  classical.hpp  hash.hpp  pq.hpp
include/pqc_ledger/tx/: signing.hpp  validation.hpp
scripts/: generate_benchmark_graph.py
src/cli/: main.cpp
src/codec/: decode.cpp  encode.cpp
src/crypto/: address.cpp  classical.cpp  hash.cpp  pq.cpp
src/tx/: signing.cpp  validation.cpp
tests/: CMakeLists.txt  codec_encoding.cpp  integration_roundtrip.cpp  mutation.cpp  replay.cpp  validation_tests.cpp
